docker/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.25.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: api-gateway
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api-gateway
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.25.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/watto: "true"
        io.kompose.service: api-gateway
        app: api-gateway-app
    spec:
      containers:
        - image: api-gateway:latest
          imagePullPolicy: Never
          name: api-gateway
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
