docker/eureka-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.25.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: eureka-server
  name: eureka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: eureka-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.25.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/watto: "true"
        io.kompose.service: eureka-server
        app: eureka-server-app
    spec:
      containers:
        - image: eureka-server:latest
          imagePullPolicy: Never
          name: eureka-server
          ports:
            - containerPort: 8761
          resources: {}
      restartPolicy: Always
status: {}
