docker/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.25.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: user-service
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: user-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.25.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/watto: "true"
        io.kompose.service: user-service
        app: user-service-app
    spec:
      containers:
        - image: user-service:latest
          imagePullPolicy: Never
          name: user-service
          ports:
            - containerPort: 8100
          resources: {}
      restartPolicy: Always
status: {}
