docker/item-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.25.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: item-service
  name: item-service
spec:
  ports:
    - name: "8300"
      port: 8300
      targetPort: 8300
  selector:
    io.kompose.service: item-service
status:
  loadBalancer: {}
