docker/order-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.25.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: order-service
  name: order-service
spec:
  ports:
    - name: "8400"
      port: 8400
      targetPort: 8400
  selector:
    io.kompose.service: order-service
status:
  loadBalancer: {}
