docker/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.25.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: user-service
  name: user-service
spec:
  ports:
    - name: "8100"
      port: 8100
      targetPort: 8100
  selector:
    io.kompose.service: user-service
status:
  loadBalancer: {}
